# math-data

./: README.md  crawl_individual_problems.py  crawl_math_problems.py  pyproject.toml
notebooks/: amps.ipynb  amps_analysis.ipynb  amps_hf_analysis.ipynb  analyze_code_derived_captions.ipynb  analyze_mavis.ipynb  analyze_mavis_executed.ipynb  analyze_numinamath_cot.ipynb  analyze_repurposing_competition_executed.ipynb  analyze_repurposing_foundational_train.ipynb  analyze_repurposing_foundational_train_executed.ipynb  analyze_tr_cot_train.ipynb  analyze_tr_cot_train_executed.ipynb  competition_math_analysis.ipynb  display_euclid30k_images.ipynb  euclid30k_analysis.ipynb  euclid30k_visualization.ipynb  geoperception_analysis.ipynb  mathcanvas_code_derived_captions.ipynb  mathcanvas_mavis_analysis.ipynb  mathcanvas_repurposing_competition.ipynb  mathcanvas_repurposing_foundational.ipynb  numinamath_cot_analysis.ipynb  prm800k_analysis.ipynb  show_euclid30k_samples.py
